// Copyright 2017 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package javatests.com.google.api.graphql.rejoiner.proto;

option java_package = "com.google.api.graphql.rejoiner";

message Proto1 {
  string id = 1;
  //Some leading comment
  int64 int_field = 2;//Some trailing comment
  Proto2 test_proto = 3;//Some trailing comment
  InnerProto test_inner_proto = 4;
  //Some leading comment
  int64 camelCaseName = 5;
  string name_field = 6 [json_name="RenamedField"];
  oneof some_oneof  {
    string val_a =7;
    int64 val_b =8;
  }
  message InnerProto {
    string foo = 1;
    oneof some_oneof{
      string val_a=2;
      int64 val_b=3;
    }
  }
}

//Enum comment
enum TestEnumWithComments {
  UNSPECIFIED = 0;
  FOO = 1; //Some trailing comment
  BAR = 2;
}

message Proto2 {
  string inner_id = 1;
  repeated TestEnum enums = 2;

  // Nested type comment
  message NestedProto {
    string nested_id = 1; //Some nested id
  }

    //Enum comment
  enum TestEnum {
    UNKNOWN = 0; //Some trailing comment
    FOO = 1;
    BAR = 2;
  }
}
